fixed the add post fields appearing when in collapsed mode in 1080p displays

--- a/src/features/posts/AddPost/AddPost.css
+++ b/src/features/posts/AddPost/AddPost.css
@@ -143,7 +143,7 @@
 .new-posts-collapsed {
     animation-name: slide-up-details;
     animation-duration: 1s;
-    transform: translateY(-500px);
+    transform: translateY(-100vh);
 }
 
 @keyframes slide-up-details {
@@ -151,7 +151,7 @@
         transform: translateY(0px);
     }
     100% {
-        transform: translateY(-500px);
+        transform: translateY(-100vh);
     }
 }
 
